small bug of white space cleared 2

--- a/Day_1_Pomodoro_App/style.css
+++ b/Day_1_Pomodoro_App/style.css
@@ -30,7 +30,7 @@ section {
     align-items: center;
     background-color: var(--bg-color);
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 
 .clock__outerwall {
